フォームを作る（静的→コントローラー→Thymeleaf）

--- a/basic2/hello4_test/src/main/resources/templates/result.html
+++ b/basic2/hello4_test/src/main/resources/templates/result.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Hello2</title>
+<title>会員登録</title>
 </head>
 <body>
-Hello,World! こんにちは<span th:text="${name}"></span>さん！
+会員情報<span th:text="${registData}"></span>
 </body>
 </html>
